tests/parser/syntax-errors/comma-expected/missing_comma_in_call.choc
# RUN: choco-opt "%s" | filecheck "%s"

foo(1 2)

# CHECK:      SyntaxError (line 3, column 7): expression found, but comma expected.
# CHECK-NEXT: >>>foo(1 2)
# CHECK-NEXT: >>>------^
